@@ -3,7 +3,7 @@ DIST doxia-1.0_alpha8_pre20070617-gen-src.tar.bz2 11586 RMD160 affd572eeb54f14d4
 DIST doxia-1.0_alpha8_pre20070617.tar.bz2 447974 RMD160 8c2ee0b2d39d3f6c9ac8fafda0c94f12ab192b4c SHA1 5602ef4962f734b3e86ff559e01004d97241344b SHA256 35d2bcc73794cb069109b0ffa448d5e49a6bc0f20bdb643556641518d5738294
 DIST doxia-1.0_alpha9_pre20070611-gen-src.tar.bz2 1673 RMD160 4e294a7401fc57f13850fb6a4faf891d6a3c83d5 SHA1 a11a55f1adfdd2aa95358aa5e981bf5a090b1df8 SHA256 753e165c1ca583de3f0e4c1437c0b70aa207c5965078b7c5f49d2fdd2cb5f55f
 DIST doxia-1.0_alpha9_pre20070611.tar.bz2 649841 RMD160 0bf2e56bb1ed9f85b984dc64e7d1947dfa6dcf68 SHA1 f7df596e6d60e1e9eede424169e2c81bd380df54 SHA256 4d14d3bdbd6759255a8345071f77f799b749b5ff3f5a63715c629df38a38dda3
-EBUILD doxia-1.0_alpha8_pre20070617.ebuild 1247 RMD160 4551df5c09eb6b45d6d9377343ab96662fb64e8a SHA1 d621e86b06f028304621a1b27317f49a98d30bfa SHA256 1f14cf10a3301100c76213e8d685dbaeb4feae6fde929a6acf2b6d4dd09d026a
-EBUILD doxia-1.0_alpha9_pre20070611.ebuild 1464 RMD160 10e25efdec7aaa0ba4dea0cf4ffd55ac58adfa99 SHA1 56269c9d12c370e1c694968813f38b204895f749 SHA256 88833f8e1f0efb373998708eb1496487f5a9d5155ba21b723e341313ea953070
-MISC ChangeLog 844 RMD160 3da7caaefa65cdd88fabe1e6ca34bdce7f5dad81 SHA1 5b244f8f02b387eeeb5d83af18818a9c1ace7bd0 SHA256 a4192c755a326370d079b26bde79bcd852b687a100b00cdc1725465dd895c140
+EBUILD doxia-1.0_alpha8_pre20070617.ebuild 1293 RMD160 98953fd23c830cadf9eecd09beea74234e8e16bf SHA1 aff652ebdbe1c3bf80b68a0390ea8c00dc1ff535 SHA256 c4cad8c28c3ff50bb8b0e15e53efcf70cd5e0bb72b974a909fab59850b40530a
+EBUILD doxia-1.0_alpha9_pre20070611.ebuild 1494 RMD160 adef0a4529e89b7db45f49d94348b901cb3a64c6 SHA1 1ebb51c7ea42049b6c70d9987381c1f285b82e2d SHA256 964a217550e7bb1a570a916c56ea36e0eecfaac0f7a5d5483864f0eeffe7f4e3
+MISC ChangeLog 994 RMD160 d3837603d7f4d9afa0bb3608e239c91a2feca5fd SHA1 e0d67b55a81c83bbae94de6b7496ff18dbe55064 SHA256 5d8a9b524234a0987f7d9c485c4e16b1049718486d2c8a7d2eaf1b76a7c73651
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
